--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     ]
   },
   "dependencies": {
+    "@neodrag/react": "^2.0.3",
     "howler": "^2.2.3",
+    "install": "^0.13.0",
+    "npm": "^9.6.7",
     "react": "^18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3"
