--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ineedempathy",
-  "homepage": "/ineedempathy",
+  "homepage": "/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
