--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@neodrag/react": "^2.0.3",
     "howler": "^2.2.3",
     "install": "^0.13.0",
+    "lz-string": "^1.5.0",
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
