--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "@neodrag/react": "^2.0.3",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs": "^4.22.0",
     "howler": "^2.2.3",
     "install": "^0.13.0",
     "lz-string": "^1.5.0",
